Loading Overlay colors fix & landing animation visible only on first visitation of the site

--- a/webapp/src/components/overlays/loading/styles.module.css
+++ b/webapp/src/components/overlays/loading/styles.module.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    font-family: 'Montserrat';
     font-size: 4em;
     font-weight: 800;
     text-transform: uppercase;
@@ -24,8 +25,9 @@
   
   .container {
     display: flex;
-    align-items: center;
-    height: 100%;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
   }
   
